--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>
         Counter
     </title>
+    <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
     <script src="index.js"></script>
